--- a/package.json
+++ b/package.json
@@ -30,5 +30,16 @@
     "typescript": "^5.1.6",
     "vite": "^5.3.5"
   },
-  "name": "ugly-admin-front"
+  "name": "ugly-admin",
+  "imports": {
+    "#app-components/*": "./src/components/*",
+    "#app-universal/*": "./src/components/universal/*",
+    "#app-constants/*": "./src/constants/*",
+    "#app-hooks/*": "./src/hooks/*",
+    "#app-helpers/*": "./src/helpers/*",
+    "#app-pages/*": "./src/components/pages/*",
+    "#app-providers/*": "./src/providers/*",
+    "#app-http/*": "./src/http/*",
+    "#app/*": "./src/*"
+  }
 }
